tests/negative/gold/field_local_test.gold
tests/negative/field_local_test.toit:6:14: error: Definition of variable not allowed at this location
  field := x := 499
             ^~
tests/negative/field_local_test.toit:8:9: error: Unresolved identifier: 'x'
    foo x   // The x of the field initializer must not be visible here.
        ^
Compilation failed.
